@@ -2503,15 +2503,15 @@
    (set_attr "length" "8")])
 
 (define_insn "*extzv_1_r_h8300hs"
-  [(set (match_operand:SI 0 "register_operand" "=r")
-	(zero_extract:SI (match_operand:SI 1 "register_operand" "r")
+  [(set (match_operand:SI 0 "register_operand" "=r,r")
+	(zero_extract:SI (match_operand:SI 1 "register_operand" "?0,r")
 			 (const_int 1)
-			 (match_operand 2 "const_int_operand" "n")))]
+			 (match_operand 2 "const_int_operand" "n,n")))]
   "(TARGET_H8300H || TARGET_H8300S)
    && INTVAL (operands[2]) < 16"
   "* return output_simode_bld (0, operands);"
-  [(set_attr "cc" "clobber")
-   (set_attr "length" "8")])
+  [(set_attr "cc" "clobber,clobber")
+   (set_attr "length" "8,6")])
 
 ;;
 ;; Inverted loads with a 32bit destination.
@@ -2531,17 +2531,17 @@
    (set_attr "length" "8")])
 
 (define_insn "*extzv_1_r_inv_h8300hs"
-  [(set (match_operand:SI 0 "register_operand" "=r")
-	(zero_extract:SI (xor:SI (match_operand:SI 1 "register_operand" "r")
-				 (match_operand 3 "const_int_operand" "n"))
+  [(set (match_operand:SI 0 "register_operand" "=r,r")
+	(zero_extract:SI (xor:SI (match_operand:SI 1 "register_operand" "?0,r")
+				 (match_operand 3 "const_int_operand" "n,n"))
 			 (const_int 1)
-			 (match_operand 2 "const_int_operand" "n")))]
+			 (match_operand 2 "const_int_operand" "n,n")))]
   "(TARGET_H8300H || TARGET_H8300S)
    && INTVAL (operands[2]) < 16
    && (1 << INTVAL (operands[2])) == INTVAL (operands[3])"
   "* return output_simode_bld (1, operands);"
-  [(set_attr "cc" "clobber")
-   (set_attr "length" "8")])
+  [(set_attr "cc" "clobber,clobber")
+   (set_attr "length" "8,6")])
 
 (define_expand "insv"
   [(set (zero_extract:HI (match_operand:HI 0 "general_operand" "")
